# oop_2026

./: CMakeLists.txt  README.md
concept/: CMakeLists.txt  learnConept.cpp
oop1.1.4/: oop1.1.4.slnx
oop1.1.4/oop_2026/: oop_2026.cpp  oop_2026.vcxproj  oop_2026.vcxproj.filters  test.bat  test4.txt  test5-out.txt  test6.txt
oop1.2.6/: oop1.2.6.slnx
oop1.2.6/oop1.2.6/: oop1.2.6.cpp  oop1.2.6.vcxproj  oop1.2.6.vcxproj.filters  test.bat  test6-out.txt
oop1.3.2/: oop1.3.2.slnx
oop1.3.2/oop1.3.2/: helpp.txt  oop1.3.2.cpp  oop1.3.2.vcxproj  oop1.3.2.vcxproj.filters  test.bat  test4.txt  test5.txt  test6.txt  test8.txt
oop2.1.2/: oop2.1.2.slnx
oop2.1.2/oop2.1.2/: VectorUtils-test.cpp  VectorUtils.cpp  oop2.1.2.cpp  oop2.1.2.vcxproj  oop2.1.2.vcxproj.filters
oop2_3_2/: CMakeLists.txt  ConsoleUI.cpp  ConsoleUI.h  Dictionary.cpp  Dictionary.h  dict.txt  main.cpp
oop2_3_2/test/: testDict.cpp  testUI.cpp
oop2_5_1/: CMakeLists.txt  ParseUrlModules.cpp  ParseUrlModules.h  parsUrl.cpp  parsUrl.h
oop2_5_1/test/: testParsUrl.cpp
oop2_6/: CMakeLists.txt  expandTemplate.cpp  in.txt  processor.cpp  processor.h  trie.cpp  trie.h
oop2_6/test/: testExpandT.cpp
oop3_1_2/: CMakeLists.txt  Car.cpp  Car.h  CarController.cpp  CarController.h  main.cpp
oop3_1_2/test/: testCar.cpp
oop3_2/: CMakeLists.txt  Calculator.cpp  Calculator.h  ControllerCalculator.cpp  ControllerCalculator.h  Function.cpp  Function.h  Operation.h  Variable.cpp  Variable.h  main.cpp
oop3_2/test/: testCalculator.cpp  testOptimization.cpp
oop3_3/: Actor.cpp  Actor.h  Actors.cpp  Actors.h  Bank.cpp  Bank.h  BankedActor.cpp  BankedActor.h  CMakeLists.txt  Simulation.cpp  Simulation.h  main.cpp
oop3_3/test/: testBank.cpp
oop4_1/: CCanvas.cpp  CCanvas.h  CCircle.cpp  CCircle.h  CLineSegment.cpp  CLineSegment.h  CMakeLists.txt  CPoint.h  CRectangle.cpp  CRectangle.h  CShape.h  CShapeStorage.cpp  CShapeStorage.h  CSolidShape.h  CTriangle.cpp  CTriangle.h  ICanvas.h  IShape.h  ISolidShape.h  ma.txt  main.cpp
oop4_1/test/: StoreTest.cpp
oop5_1_5/: CDate.cpp  CDate.h  CMakeLists.txt
oop5_1_5/test/: DateTest.cpp
te/: 2.3.cpp  CMakeLists.txt  VectorUtils.cpp  VectorUtils.h
te/tests/: test_vectorutils.cpp
